--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,14 +16,17 @@ build:
 outputs:
   - name: allure-python-commons
     build:
-      noarch: python
+      # noarch: python
+      skip: true  # [py<38]
     requirements:
       host:
         - pip
-        - python >=3.6
-        - setuptools-scm
+        - python
+        - setuptools
+        - wheel
+        - setuptools-scm 7.1.0
       run:
-        - python >=3.6
+        - python
         - attrs >=16.0.0
         - pluggy >=0.4.0
     script: install.sh
@@ -33,14 +36,17 @@ outputs:
         - allure_commons
   - name: allure-behave
     build:
-      noarch: python
+      # noarch: python
+      skip: true  # [py<38]
     requirements:
       host:
         - pip
-        - python >=3.6
-        - setuptools-scm
+        - python
+        - setuptools
+        - wheel
+        - setuptools-scm 7.1.0
       run:
-        - python >=3.6
+        - python
         - behave >=1.2.5
         - {{ pin_subpackage('allure-python-commons', exact=True) }}
     script: install.sh
@@ -49,14 +55,17 @@ outputs:
         - allure_behave
   - name: allure-nose2
     build:
-      noarch: python
+      # noarch: python
+      skip: true  # [py<38]
     requirements:
       host:
         - pip
-        - python >=3.6
-        - setuptools-scm
+        - python
+        - setuptools
+        - wheel
+        - setuptools-scm 7.1.0
       run:
-        - python >=3.6
+        - python
         - nose2
         - {{ pin_subpackage('allure-python-commons', exact=True) }}
     script: install.sh
@@ -65,14 +74,17 @@ outputs:
         - allure_nose2
   - name: allure-pytest
     build:
-      noarch: python
+      # noarch: python
+      skip: true  # [py<38]
     requirements:
       host:
         - pip
-        - python >=3.6
-        - setuptools-scm
+        - python
+        - setuptools
+        - wheel
+        - setuptools-scm 7.1.0
       run:
-        - python >=3.6
+        - python
         - pytest >=4.5.0
         - {{ pin_subpackage('allure-python-commons', exact=True) }}
     script: install.sh
@@ -81,14 +93,17 @@ outputs:
         - allure_pytest
   - name: allure-pytest-bdd
     build:
-      noarch: python
+      # noarch: python
+      skip: true  # [py<38]
     requirements:
       host:
         - pip
-        - python >=3.6
-        - setuptools-scm
+        - python
+        - setuptools
+        - wheel
+        - setuptools-scm 7.1.0
       run:
-        - python >=3.6
+        - python
         - pytest >=4.5.0
         - pytest-bdd >=3.0.0
         - {{ pin_subpackage('allure-python-commons', exact=True) }}
@@ -98,14 +113,17 @@ outputs:
         - allure_pytest_bdd
   - name: allure-robotframework
     build:
-      noarch: python
+      # noarch: python
+      skip: true  # [py<38]
     requirements:
       host:
         - pip
-        - python >=3.6
-        - setuptools-scm
+        - python 
+        - setuptools
+        - wheel
+        - setuptools-scm 7.1.0
       run:
-        - python >=3.6
+        - python
         - robotframework
         - {{ pin_subpackage('allure-python-commons', exact=True) }}
     script: install.sh
@@ -116,10 +134,14 @@ outputs:
 
 about:
   home: https://github.com/allure-framework/allure-python
+  dev_url: https://github.com/allure-framework/allure-python
   license: Apache-2.0
   license_file: LICENSE
+  license_family: APACHE
   summary: Allure integrations for Python test frameworks
-
+  description: |
+    Allure Framework is a flexible lightweight multi-language test report tool that not only shows a very concise representation of what have been tested in a neat web report form, but allows everyone participating in the development process to extract maximum of useful information from everyday execution of tests.
+  doc_url: https://docs.qameta.io/allure-report/
 extra:
   recipe-maintainers:
     - kenodegard
