--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -149,7 +149,9 @@ outputs:
       commands:
         # ImportError: Error importing plugin "check": No module named 'check'
         # Needs pytest-check, which is not available in the main channel.
-        - pytest -v -k "not test_pytest_check" tests/allure_pytest
+        - pytest -v -k "not test_pytest_check" tests/allure_pytest  # [not win]
+        # AssertionError: Expected greater 1745831725925, but 1745831725859.
+        - pytest -v -k "not test_pytest_check or test_duration" tests/allure_pytest  # [win]
       requires:
         - {{ pin_subpackage('allure-python-commons-test', exact=True) }}
         - pytest
