--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,7 +20,7 @@ outputs:
     script: install.bat  # [win]
     requirements:
       host:
-        - pip 25.0
+        - pip !=25.1
         - python
         - setuptools
         - wheel
@@ -36,14 +36,14 @@ outputs:
       commands:
         - pip check
       requires:
-        - pip 25.0
+        - pip !=25.1
 
   - name: allure-python-commons-test
     script: install.sh   # [unix]
     script: install.bat  # [win]
     requirements:
       host:
-        - pip 25.0
+        - pip !=25.1
         - python
         - setuptools
         - wheel
@@ -57,7 +57,7 @@ outputs:
       commands:
         - pip check
       requires:
-        - pip 25.0
+        - pip !=25.1
 
   - name: allure-behave
     build:
@@ -69,7 +69,7 @@ outputs:
     script: install.bat  # [win]
     requirements:
       host:
-        - pip 25.0
+        - pip !=25.1
         - python
         - setuptools
         - wheel
@@ -91,7 +91,7 @@ outputs:
         - pip check
         - pytest -v tests/allure_behave
       requires:
-        - pip 25.0
+        - pip !=25.1
         - {{ pin_subpackage('allure-python-commons-test', exact=True) }}
         - pytest
         - docutils
@@ -105,7 +105,7 @@ outputs:
     script: install.bat  # [win]
     requirements:
       host:
-        - pip 25.0
+        - pip !=25.1
         - python
         - setuptools
         - wheel
@@ -126,7 +126,7 @@ outputs:
         - pip check
         - pytest -v tests/allure_nose2
       requires:
-        - pip 25.0
+        - pip !=25.1
         - {{ pin_subpackage('allure-python-commons-test', exact=True) }}
         - pytest
         - docutils
@@ -140,7 +140,7 @@ outputs:
     script: install.bat  # [win]
     requirements:
       host:
-        - pip 25.0
+        - pip !=25.1
         - python
         - setuptools
         - wheel
@@ -166,7 +166,7 @@ outputs:
         # AssertionError: Expected greater 1745831725925, but 1745831725859.
         - pytest -v --ignore=tests/allure_pytest/acceptance/duration/duration_time_test.py -k "not test_pytest_check" tests/allure_pytest  # [win]
       requires:
-        - pip 25.0
+        - pip !=25.1
         - {{ pin_subpackage('allure-python-commons-test', exact=True) }}
         - pytest
         - pytest-xdist
@@ -183,7 +183,7 @@ outputs:
     script: install.bat  # [win]
     requirements:
       host:
-        - pip 25.0
+        - pip !=25.1
         - python
         - setuptools
         - wheel
@@ -206,7 +206,7 @@ outputs:
         - pip check
         - pytest -v tests/allure_pytest_bdd --clean-alluredir
       requires:
-        - pip 25.0
+        - pip !=25.1
         - {{ pin_subpackage('allure-python-commons-test', exact=True) }}
         - pytest <8.0
         - pytest-bdd <8.0
@@ -221,7 +221,7 @@ outputs:
     script: install.bat  # [win]
     requirements:
       host:
-        - pip 25.0
+        - pip !=25.1
         - python 
         - setuptools
         - wheel
@@ -244,7 +244,7 @@ outputs:
         - pip check
         - pytest -v tests/allure_robotframework
       requires:
-        - pip 25.0
+        - pip !=25.1
         - {{ pin_subpackage('allure-python-commons-test', exact=True) }}
         - pytest
         - docutils
